deploy/network/httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: hse-llm-project
  labels:
    app.kubernetes.io/part-of: frontend
spec:
  parentRefs:
    - name: web-gateway
      namespace: hse-llm-project
  hostnames:
    - frontend.hse-llm.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
